name:                radiod
version:             2
synopsis:            Watch for radios to appear and take action
license:             GPL-3
license-file:        LICENSE
author:              Chris Lumens
maintainer:          chris@bangmoney.org
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.10

extra-source-files:  ChangeLog.md,
                     README.md,
                     data/radiod.conf,
                     data/rigctld-wrapper,
                     data/rotctld-wrapper

library
  exposed-modules:   System.Radiod.ConfigFile,
                     System.Radiod.Types

  other-modules:     Paths_radiod

  build-depends:     base >= 4.9 && < 5,
                     containers >= 0.5 && < 0.6,
                     directory,
                     filepath,
                     safe >= 0.3.16 && < 0.4.0,
                     text >= 1.2 && < 1.3,
                     typed-process >= 0.2.1.0 && < 0.3.0.0

  default-language:  Haskell2010

  ghc-options:       -Wall

executable radiod
  main-is:           Main.hs
  build-depends:     base >= 4.9 && < 5,
                     bytestring,
                     containers >= 0.5 && < 0.6,
                     directory,
                     filepath,
                     hinotify >= 0.3.10,
                     radiod,
                     safe >= 0.3.16 && < 0.4.0,
                     text >= 1.2 && < 1.3,
                     typed-process >= 0.2.1.0 && < 0.3.0.0,
                     unix

  other-modules:     Paths_radiod

  default-language:  Haskell2010

  ghc-options:       -Wall -threaded
